fixed sidebar collapse after select

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -59,7 +59,7 @@
 }
 
 :global .active {
-    margin-left: -11.5px;
+    margin-left: -12.5px;
 }
 
 :global .active {
